<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/welcome"
        android:textColor="#2D2B71"
        android:textSize="30sp" />

    <TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_command"
        android:textAlignment="center"
        android:textColor="#2D2B71"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="340dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="#2D2B71"
        android:text="@string/email" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/emphaized_edt"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#2D2B71"
        android:text="@string/password" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/emphaized_edt"
        android:paddingLeft="10dp" />

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal">

        <CheckBox
            android:id="@+id/chb_remember"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="50"
            android:buttonTint="#2D2B71"
            android:focusable="true"
            android:onClick="onClick"
            android:text="@string/remember_me"
            android:textColor="#2D2B71"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:onClick="onClick"
            android:text="@string/forgot_password"
            android:textColor="#2D2B71"
            android:textSize="17sp" />

    </LinearLayout>

    <Button
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/btn_login"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btn_login"
        android:background="@drawable/round_blue_button"/>

    <TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_invitation"
        android:textAlignment="center"
        android:textColor="#2D2B71"
        android:textSize="15sp"
        android:onClick="onClick"
        android:id="@+id/txt_registration"
        android:layout_marginTop="20dp"/>

    <View
        android:layout_width="340dp"
        android:layout_height="2dp"
        android:layout_marginTop="30dp"
        android:background="#2D2B71"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_email"
        android:textAlignment="center"
        android:textColor="#2D2B71"
        android:textSize="15sp"/>

    <Button
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/btn_login_google"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btn_login_with_Google"
        android:background="@drawable/round_red_button"/>


    <Button
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/btn_login_email"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btn_login_with_email"
        android:background="@drawable/round_yellow_button"/>

</LinearLayout>