<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <ImageView
        android:layout_marginTop="20dp"
        android:id="@+id/onboarding_image"
        android:layout_width="340dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/onboarding_img1" />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="#2D2B71"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:text="@string/first_main_title"
        android:id="@+id/onboarding_main_header"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#2D2B71"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/first_info_title"
        android:id="@+id/onboarding_second_header"/>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/onboarding_selected"
            android:id="@+id/onboardingStateImg1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/onboarding_free"
            android:layout_marginLeft="15dp"
            android:id="@+id/onboardingStateImg2"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/onboarding_free"
            android:layout_marginLeft="15dp"
            android:id="@+id/onboardingStateImg3"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/onboarding_free"
            android:layout_marginLeft="15dp"
            android:id="@+id/onboardingStateImg4"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/onboarding_free"
            android:layout_marginLeft="15dp"
            android:id="@+id/onboardingStateImg5"/>
    </LinearLayout>

<!--    <GridView-->
<!--        android:layout_width="340dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:id="@+id/onboarding_grid"-->
<!--        android:numColumns="5"-->
<!--        android:horizontalSpacing="20dp"-->
<!--        android:layout_gravity="center_horizontal"/>-->

  <Button
      android:layout_width="340dp"
      android:layout_marginTop="75dp"
      android:layout_height="wrap_content"
      android:background="@drawable/round_blue_button"
      android:id="@+id/btn_registration"
      android:textColor="@color/white"
      android:layout_gravity="center_horizontal"
      android:onClick="onClick"
      android:text="@string/btn_registration"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:onClick="onClick"
        android:id="@+id/txt_login"
        android:textColor="#2D2B71"
        android:text="@string/enter"/>

</LinearLayout>